--- a/02(CallApp)/style.css
+++ b/02(CallApp)/style.css
@@ -6,12 +6,15 @@
 html,body{
     width: 100%;
     height: 100%;
-    overflow: hidden;
+    /* overflow: auto; */
+}
+body{
+    background-color: #e1e1e1;
 }
 .main-container{
     width: 70%;
     height: 60%;
-    background-color: rgb(238, 236, 236);
+    /* background-color: #E2DADA; */
     margin: 10% auto;
     /* position: relative; */
     display: flex;
@@ -26,20 +29,28 @@ html,body{
     flex-direction: column;
     min-height: max-content;
     width: max-content;
-    background-color: #fff;
+    background-color: #ffffff;
     gap: 20px;
+    padding: 8px;
+    border-radius: 10px;
+    box-shadow: 2px 2px 5px 2px gray;
 }
 .buttons-div i{
     font-size: 1.4rem;
+    background-color: transparent;
 }
 .buttons-div div{
-    border: 2px solid ;
+    border: 2px solid transparent;
     width: max-content;
+    box-shadow: -2px -2px 5px 2px gray;
     padding: 5px;
     border-radius: 30%;
+    background-color: white;
+
 }
 .card-stack .card{
-    background-color: rgb(197, 197, 194);
+    background-color: white;
+     box-shadow: 2px 5px 10px 5px gray;
     width: 300px;
     height: 250px;
     padding: 20px;
@@ -72,10 +83,39 @@ html,body{
 }
 .main-container .form-container{
     width: 500px;
-    height: 600px;
+    min-height: max-content;
     position: absolute;
-    background-color: rgb(156, 158, 156);
+    background-color: white;
     padding: 20px;
+    display: none;
+    border-radius: 10px;
+
+}
+#userForm input:nth-child(n+2){
+    width: 80%;
+    padding: 8px;
+    border-radius: 10px;
+    border: 1px solid transparent ;
+    box-shadow: inset 1px 1px 5px 1px #ffffff;
+    background-color: #F7F7F7;
+
+}
+#userForm #buttons{
+    display: flex;
+    /* background-color: red; */
+    flex-direction: column;
+    gap: 5px;
+    padding: 10px;
+}
+#userForm #buttons button{
+    border: none;
+    padding: 10px 0;
+    background-color: rgb(0, 204, 255);
+    border-radius: 10px;
+}
+#userForm #buttons button:nth-child(2){
+    color: white;
+    background-color: rgb(255, 97, 97);
 }
 #userForm lable{
     display: block;
