--- a/productivityDashboard/style.css
+++ b/productivityDashboard/style.css
@@ -3,6 +3,7 @@
     --sec:#381c0a;
     --tri1:#feba17;
     --tri2:#74512d;
+    --red:red; 
 
 
 }
@@ -71,7 +72,7 @@ section.allElems{
     position: absolute;
     bottom: 5%;
     font-weight: 200 ;
-    font-size: ;
+    font-size: 2rem;
     right: 5%;
 }
 .elem:active{
@@ -83,15 +84,15 @@ section.allElems{
     height: 100%;
     background-color: var(--sec);
     padding: 40px;
-    font-size: 3rem;
+    /* font-size: 3rem; */
     display: none;
     position: absolute;
     inset: 0;
 
 }
-.fullElem button{
+.fullElem .back{
     padding: 15px 20px;
-    background-color: red;
+    background-color: var(--red);
     color: white;
     position: absolute;
     top: 5%;
@@ -102,4 +103,133 @@ section.allElems{
 }
 .fullElem button:active{
     scale: .9;
+}
+
+/*  TODO APP CODING STARTS HERE */
+.todo-list-fullpage{
+    background-color: var(--sec)  ;
+}
+.todo-list-fullpage .todo-container{
+    height: 90%;
+    width: 100%;
+    display: flex;
+    column-gap: 20px;
+    padding: 20px;
+    /* background-color: var(--tri2); */
+    align-items: center;
+}
+
+.todo-list-fullpage .todo-container .addTask{
+    width: 40%;
+    background-color: var(--tri2);
+    height: 100%;
+}
+.todo-list-fullpage .todo-container .allTask{
+    width: 60%;
+    background-color: var(--tri2);
+    height: 100%;
+    padding: 20px;
+    /* display: flex;
+    flex-direction: column;
+    row-gap: 10px; */
+    overflow: auto;
+}
+.task{
+    border-radius: 5px;
+    display: flex;
+    /* row-gap: 10px; */
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    padding: 10px;
+    background-color: var(--pri);
+    margin-bottom: 10px;
+}
+.task h5{
+    color: var(--sec);
+    display: flex;
+    align-items: center;
+    font-size: 1.3rem;
+    column-gap: 5px;
+}
+.task h5 span{
+    color: var(--pri);
+    /* margin-bottom: -5px; */
+    background-color: var(--red);
+    padding: 4px 6px;
+    border-radius: 5px;
+    margin-top: 10px;
+    font-size: .7rem;
+}
+.task h5 span.true{
+    opacity: 1;
+}
+.task h5 span.false{
+    opacity: 0;
+}
+.task button{
+    padding: 10px 15px;
+    background-color:green;
+    border: none;
+    border-radius: 5px;
+    color: var(--pri);
+}
+
+.todo-list-fullpage .todo-container .addTask form{
+    display: flex;
+    /* justify-content: center; */
+    align-items: start;
+    padding: 30px;
+    flex-direction: column;
+    row-gap: 20px;
+}
+
+.todo-list-fullpage .todo-container .addTask form > input{
+    padding: 15px 15px;
+    width: 100%;
+    color: var(--sec);
+    /* font-size: 35px; */
+    background-color: var(--pri);
+    border-radius: 5px;
+    border: none;
+    outline: none;
+}
+
+.todo-list-fullpage .todo-container .addTask form > textarea{
+    color: var(--sec);
+    max-width: 100%;
+    min-width: 100%;
+    min-height: 5rem;
+    background-color: var(--pri);
+    border: none;
+    padding: 10px;
+    border-radius: 5px;
+    outline: none;
+}
+.todo-list-fullpage .todo-container .addTask form button{
+    width: 100%;
+    padding: 15px 0;
+    background-color: var(--tri1);
+    border: none;
+    border-radius: 5px;
+    transition: all ease .3s;
+    
+}
+.todo-list-fullpage .todo-container .addTask form button:active{
+    scale: .9;
+}
+
+.mark-imp{
+    display: flex;
+    align-items: center;
+    column-gap: 15px;
+    padding: 5px;
+    justify-content: flex-start;
+    width: 100%;
+    /* background-color: green; */
+}
+.mark-imp #check{
+    width: 15px ;
+    height: 15px;
+    border-radius: 5px;
 }
